--- a/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
+++ b/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
@@ -171,7 +171,7 @@ src="https://www.facebook.com/tr?id=764543301079368&ev=PageView&noscript=1"
 
 <section id="about-us">
 <div class="container">
-<h1 class="title text-center">LOCAL NEWS</h1>
+<h1 class="title text-center">NEWS</h1>
 <div class="row">
 <div class="col-md-6 about-us">
 <p  class="about-title">HEADLINES</p>
@@ -196,7 +196,7 @@ src="https://www.facebook.com/tr?id=764543301079368&ev=PageView&noscript=1"
 
 <section id="testimonials">
 <div class="container">
-<h1 class="title text-center">FOREIGN NEWS </h1>
+<h1 class="title text-center">MEDIA </h1>
 <div class="row offset-1">
 <div class="col-md-5 testimonials">
     <P>LIFESTYLE</P>
