--- a/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
+++ b/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
@@ -176,7 +176,7 @@ src="https://www.facebook.com/tr?id=764543301079368&ev=PageView&noscript=1"
 <div class="col-md-6 about-us">
 <p  class="about-title">HEADLINES</p>
      <ul>
-       <li></li>
+       <li><a href="https://us.cnn.com/?hpt=ed_US">CNN</a></li>
        <li></li>
        <li></li>
        <li></li>
