--- a/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
+++ b/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
@@ -177,7 +177,7 @@ src="https://www.facebook.com/tr?id=764543301079368&ev=PageView&noscript=1"
 <p  class="about-title">HEADLINES</p>
      <ul>
        <li><a href="https://us.cnn.com/?hpt=ed_US">CNN</a></li>
-       <li></li>
+       <li><a href="https://www.bbc.com/news">BBC</a></li>
        <li></li>
        <li></li>
        <li></li> 
