--- a/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
+++ b/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
@@ -178,10 +178,10 @@ src="https://www.facebook.com/tr?id=764543301079368&ev=PageView&noscript=1"
      <ul>
        <li><a href="https://us.cnn.com/?hpt=ed_US">CNN</a></li>
        <li><a href="https://www.bbc.com/news">BBC</a></li>
-       <li></li>
-       <li></li>
-       <li></li> 
-       <li></li>
+       <li><a href="https://www.aljazeera.com/">https://ALJAZEERA</a></li>
+       <li><a href="https://www.aljazeera.com/">https://GRAPHIC ONLINE GHANA</a></li>
+       <li><a href="https://dailyguidenetwork.com/">DAILY GUIDE</a></li> 
+       <li><a href="https://www.myjoyonline.com/">MY JOYONLINE</a></li>
        <li></li> 
      </ul>  
 </div>
