--- a/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
+++ b/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
@@ -174,7 +174,7 @@ src="https://www.facebook.com/tr?id=764543301079368&ev=PageView&noscript=1"
 <h1 class="title text-center">NEWS</h1>
 <div class="row">
 <div class="col-md-6 about-us">
-<p  class="about-title">HEADLINES</p>
+<p  class="about-title">OFFICIAL WEBSITES</p>
      <ul>
        <li><a href="https://us.cnn.com/?hpt=ed_US">CNN</a></li>
        <li><a href="https://www.bbc.com/news">BBC</a></li>
