--- a/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
+++ b/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
@@ -56,10 +56,10 @@ src="https://www.facebook.com/tr?id=764543301079368&ev=PageView&noscript=1"
         <a class="nav-link" href="#services">TRENDS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#about-us">LOCAL NEWS</a>
+        <a class="nav-link" href="#about-us">NEWS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#testimonials">FOREIGN NEWS</a>
+        <a class="nav-link" href="#testimonials">MEDIA</a>
       </li>
        <li class="nav-item">
         <a class="nav-link" href="#footer">CONTACT</a>
