--- a/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
+++ b/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
@@ -133,8 +133,8 @@ src="https://www.facebook.com/tr?id=764543301079368&ev=PageView&noscript=1"
                     <h2>The iphone-12</h2> 
                     <p>A little later in the year than usual, but today we finally saw the announcement of Apple’s newest line-up of iPhones. This time around we didn’t get two,<br> or even three phones, but a total of four new devices ranging both in size as well as in pricing. The iPhone 12 series is a major leap for Apple as they represent the company’s first ever 5G devices, preparing the company for the next generation of cellular networks for the better part of this decade.
                       The iPhone 12 Pro and 12 Pro Max are both straightforward upgrades to the 11 Pro series, whilst the regular iPhone 12 represents the mainstream option as a successor to the iPhone 11. <br>The new entry in the line-up is the iPhone 12 mini – an incredibly exciting device for people who are looking for a more diminutive form-factor device, being smaller and more light-weight than even the iPhone SE released earlier in the year.
-                      Thanks to the new A14 SoC, we’re seeing upgraded performance across the board, as well as greatly improve image processing on the camera systems, <br>with particularly the iPhone 12 Pro Max standing out in terms of its camera systems.</p>
-                            <button onclick="window.location .href='https://www.apple.com/iphone-12/';" type="button">Read More</button>
+                      Thanks to the new A14 SoC, we’re seeing upgraded performance across the board, as well as greatly improve image processing on the camera systems, <br>with particularly the iPhone 12 Pro Max standing out in terms of its camera systems <a href="shop.html"> Shop Here </a>.</p>
+                            <button onclick="window.location .href='https://www.apple.com/iphone-12/" type="button">Read More</button>
                    </div>
                    <div class="col-md-6">
                        <div class="img-box">
