--- a/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
+++ b/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
@@ -2,8 +2,8 @@
 <head>
 <title>SAM_TECHY_SOLUTIONS_blog</title>
 <link rel="stylesheet" href="style1.css">
-	
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="stylesheet.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
