--- a/SAM_TECHY_SOLUTIONS/shop.html
+++ b/SAM_TECHY_SOLUTIONS/shop.html
@@ -27,26 +27,26 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 <section id="nav-bar">
 
 <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="#"><p>SAM_TECHY_SOLUTIONS_blog</p></a>
+  <a class="navbar-brand" href="https://sam-techy-solutions-blog.vercel.app/SAM_TECHY_SOLUTIONS_blog.html?fbclid=IwAR04qQOeQHBX8rUsFnX-FB1xeRaSWdPE8xfgX-PAvB5U2CSMQ6EFM_5fAuU#top"><p>SAM_TECHY_SOLUTIONS_blog</p></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <i class="fa fa-bars" aria-hidden="true"></i>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#top">HOME <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="https://sam-techy-solutions-blog.vercel.app/SAM_TECHY_SOLUTIONS_blog.html?fbclid=IwAR04qQOeQHBX8rUsFnX-FB1xeRaSWdPE8xfgX-PAvB5U2CSMQ6EFM_5fAuU#toptop">HOME <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#services">TRENDS</a>
+        <a class="nav-link" href="https://sam-techy-solutions-blog.vercel.app/SAM_TECHY_SOLUTIONS_blog.html?fbclid=IwAR04qQOeQHBX8rUsFnX-FB1xeRaSWdPE8xfgX-PAvB5U2CSMQ6EFM_5fAuU#services">TRENDS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#about-us">LOCAL NEWS</a>
+        <a class="nav-link" href="https://sam-techy-solutions-blog.vercel.app/SAM_TECHY_SOLUTIONS_blog.html?fbclid=IwAR04qQOeQHBX8rUsFnX-FB1xeRaSWdPE8xfgX-PAvB5U2CSMQ6EFM_5fAuU#about-us">LOCAL NEWS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#testimonials">FOREIGN NEWS</a>
+        <a class="nav-link" href="https://sam-techy-solutions-blog.vercel.app/SAM_TECHY_SOLUTIONS_blog.html?fbclid=IwAR04qQOeQHBX8rUsFnX-FB1xeRaSWdPE8xfgX-PAvB5U2CSMQ6EFM_5fAuU#testimonials">FOREIGN NEWS</a>
       </li>
        <li class="nav-item">
-        <a class="nav-link" href="#footer">CONTACT</a>
+        <a class="nav-link" href="https://sam-techy-solutions-blog.vercel.app/SAM_TECHY_SOLUTIONS_blog.html?fbclid=IwAR04qQOeQHBX8rUsFnX-FB1xeRaSWdPE8xfgX-PAvB5U2CSMQ6EFM_5fAuU#footer">CONTACT</a>
       </li>
     </ul>
   </div>
