--- a/SAM_TECHY_SOLUTIONS/shop.html
+++ b/SAM_TECHY_SOLUTIONS/shop.html
@@ -61,7 +61,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   <div class="team-area">
     <div class="single-team">
       <marquee width="60%" direction="left" height="100px">
-        Kindly place your order via Chat Bot.
+        <h1>Kindly place your orders Using Messenger Chat Bot Below.</h1>
         </marquee>
      <img src="PS1.jpg" alt="">
       <div class="team-text">
@@ -128,7 +128,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 <!--------------------------Services section----------------------->
 <section id="services">
   <marquee width="100%" direction="left" height="100px">
-    Kindly place your order via Chat Bot.
+     <h1>Kindly place your orders Using Messenger Chat Bot Below.</h1>
     </marquee>
   <div class="team-area">
     <div class="single-team">
@@ -197,7 +197,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 <section id="about-us">
 
   <marquee width="100%" direction="left" height="100px">
-    Kindly place your order via Chat Bot.
+     <h1>Kindly place your orders Using Messenger Chat Bot Below.</h1>
     </marquee>
   <div class="team-area">
     <div class="single-team">
@@ -262,6 +262,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 <!---------------------------Testimonials------------------------------------>
 
 <section id="testimonials">
+	 <marquee width="100%" direction="left" height="100px">
+     <h1>Kindly place your orders Using Messenger Chat Bot Below.</h1>
+    </marquee>
   <div class="team-area">
     <div class="single-team">
      <img src="HT.jpg" alt="">
