--- a/SAM_TECHY_SOLUTIONS/shop.html
+++ b/SAM_TECHY_SOLUTIONS/shop.html
@@ -56,7 +56,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 <!------------------------banner section-------------------------->
 <section id="banner">
   <marquee width="100%" direction="left" height="100px">
-    Kindly place your order via Chat Bot.
+    h1>Kindly place your orders Using Messenger Chat Bot Below.</h1>
     </marquee>
   <div class="team-area">
     <div class="single-team">
