--- a/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
+++ b/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
@@ -203,12 +203,12 @@ src="https://www.facebook.com/tr?id=764543301079368&ev=PageView&noscript=1"
 <div class="col-md-5 testimonials">
     <P>LIFESTYLE</P>
      <img src="woman.webp">
-     <p class="user-details"><b>Angelina</b><br>Co-founder at xyx</p>
+     <p class="user-details"><b>Coming</b><br>Soon!!!</p>
 </div>
 <div class="col-md-5 testimonials">
     <P>ENTERTAINMENT</P>
      <img src="man.jpg">
-     <p class="user-details"><b>John Doe</b><br>Director at xyx</p>
+     <p class="user-details"><b>Coming</b><br>Soon!!!</p>
 </div>
 </div>
 </div>
