--- a/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
+++ b/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
@@ -151,6 +151,36 @@ src="https://www.facebook.com/tr?id=764543301079368&ev=PageView&noscript=1"
                 </div>
             </div>
           </div>
+		<div class="carousel-item slide-three">
+          <div class="container" >
+              <div class="row">
+                 <div class="col-md-6" >
+                  <a style="text-decoration: none;" href="SAM_TECHY_SOLUTIONS_blog.html"><h1 class="animate__animated  animate__fadeOutLeft animate__delay-1s">Watunet</h1></a>
+                  <h2>PRESS RELEASE
+                    THE LAUNCH OF AFRICA’S FIRST SOCIAL MEDIA PLATFORM</h2> 
+                  <p style="overflow:auto; height: 200px;">
+                   
+                    A whole new digital world awaits the African community and the world in general,
+                     a platform that allows you to interract socially with your friends and family,
+                     business partners, meet soul mates to building long lasting relationships.
+                     Watunethas come to be thread that weaves a new fabric for connecting socially,
+                     over the internet 
+                   </p>
+                          <button onclick="window.location .href='Blog post.html';" type="button">Read More</button>
+                 </div>
+                 <div class="col-md-6">
+                     <div class="img-box">
+                       <img src="images/TW.png" class="img-one animate__animated  animate__zoomIn animate__delay-2s">
+                       <img style=" left: 200px; top: 240px;" src="images/img-5.png" class="img-two animate__animated  animate__fadeOutLeft animate__delay-4s" >
+                       <img src="images/img-3.png" class="img-three animate__animated  animate__fadeInUp animate__delay-3s" >
+                       <img src="images/pic-5.png" class="img-four animate__animated  animate__fadeInDown animate__delay-3s" >
+                       <img src="images/pic-4.png" class="img-five animate__animated  animate__fadeInRight animate__delay-4s" >
+                       
+                     </div>
+                 </div>
+              </div>
+          </div>
+      </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
