--- a/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
+++ b/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
@@ -166,7 +166,7 @@ src="https://www.facebook.com/tr?id=764543301079368&ev=PageView&noscript=1"
                      Watunethas come to be thread that weaves a new fabric for connecting socially,
                      over the internet 
                    </p>
-                          <button onclick="window.location .href='Blog post.html';" type="button">Read More</button>
+                          <button onclick="window.location .href='Blog post.html" type="button">Read More</button>
                  </div>
                  <div class="col-md-6">
                      <div class="img-box">
