--- a/SAM_TECHY_SOLUTIONS/Blog post.html
+++ b/SAM_TECHY_SOLUTIONS/Blog post.html
@@ -70,7 +70,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     <H2 style="text-decoration: blue;"> PRESS RELEASE THE LAUNCH OF AFRICA’S FIRST SOCIAL MEDIA PLATFORM </H2>
     </marquee>
   
-      <P>
+      <P style="padding: 50px;>
        <h4> Watunet incorporation, a Technology and social Media Company, is glad to announce the launch ‘’watunet’’, Africa’s Number one Social Media Platform expressing AFRICA's heritage to the World. 
 
 This social media App was borne out of the urgent need for Africans to have their own platform where they can showcase their heritage and culture and also do other things in the global space. All in the spirit of Ubuntu; the spirit that binds the African continent together, the spirit that stands on the principle of oneness, understanding that I am because we are.
