--- a/SAM_TECHY_SOLUTIONS/Blog post.html
+++ b/SAM_TECHY_SOLUTIONS/Blog post.html
@@ -36,7 +36,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         <a class="nav-link" href="https://sam-techy-solutions-blog.vercel.app/SAM_TECHY_SOLUTIONS_blog.html?fbclid=IwAR04qQOeQHBX8rUsFnX-FB1xeRaSWdPE8xfgX-PAvB5U2CSMQ6EFM_5fAuU#top">HOME <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#services">TRENDS</a>
+        <a class="nav-link" href="https://sam-techy-solutions-blog.vercel.app/SAM_TECHY_SOLUTIONS_blog.html?fbclid=IwAR04qQOeQHBX8rUsFnX-FB1xeRaSWdPE8xfgX-PAvB5U2CSMQ6EFM_5fAuU#services">TRENDS</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#about-us">LOCAL NEWS</a>
