--- a/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
+++ b/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
@@ -165,6 +165,7 @@ src="https://www.facebook.com/tr?id=764543301079368&ev=PageView&noscript=1"
                      business partners, meet soul mates to building long lasting relationships.
                      Watunethas come to be thread that weaves a new fabric for connecting socially,
                      over the internet 
+			<a href="Blog post.html">Find Press Release</a>  
                    </p>
                           <button onclick="window.location .href='Blog post.html" type="button">Read More</button>
                  </div>
