--- a/SAM_TECHY_SOLUTIONS/Blog post.html
+++ b/SAM_TECHY_SOLUTIONS/Blog post.html
@@ -57,6 +57,10 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   <marquee width="100%" direction="left" height="100px">
     <h1 style="text-decoration: blue;">WATUNET 🤩</h1>
     </marquee>
+	
+	<div class="col-md-6 text-center">
+      <img src="images/Watunet.png" class="img-fluid">
+      </div>
    
     <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fweb.facebook.com%2Fchioma.chukwudiorji%2Fvideos%2F252763846700913%2F&show_text=false&width=476&t=0" width="476" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
 
@@ -86,10 +90,10 @@ Further Enquires contact:
 ceo@watunet.com
 +2348037890697
 
-Head of Strategic Planning and Implementation Sub Sahara Region - +233549148087 </h4>
+Head of Strategic Planning and Implementation Sub Sahara Region - +233549148087 <br><a href="https://messenger.watunet.com/oauth/login"> Join Watunet</a> </h4>
 
       </P>
-<a href="https://messenger.watunet.com/oauth/login"> Join Watunet</a>
+
 
  
    
