--- a/SAM_TECHY_SOLUTIONS/Blog post.html
+++ b/SAM_TECHY_SOLUTIONS/Blog post.html
@@ -61,9 +61,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 	<div class="col-md-6 text-center">
       <img src="images/Watunet.png" class="img-fluid">
       </div>
-   
+   <div class="col-md-6 text-center">
     <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fweb.facebook.com%2Fchioma.chukwudiorji%2Fvideos%2F252763846700913%2F&show_text=false&width=476&t=0" width="476" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
-
+</div>
 <img src="wave1.png" class="bottom-img">
 
 
