--- a/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
+++ b/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<link rel = "icon" type = "image/png" href = "ST.png" class="footer-box"> 
 <title>SAM_TECHY_SOLUTIONS_blog</title>
 <link rel="stylesheet" href="style1.css">
 <link rel="stylesheet" href="style.css">
