--- a/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
+++ b/SAM_TECHY_SOLUTIONS/SAM_TECHY_SOLUTIONS_blog.html
@@ -45,7 +45,7 @@ src="https://www.facebook.com/tr?id=764543301079368&ev=PageView&noscript=1"
 <section id="nav-bar">
 
 <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="https://sam-techy-solutions-blog.vercel.app/SAM_TECHY_SOLUTIONS_blog.html?fbclid=IwAR04qQOeQHBX8rUsFnX-FB1xeRaSWdPE8xfgX-PAvB5U2CSMQ6EFM_5fAuU#top"><img src="ST.png"><p>SAM_TECHY_SOLUTIONS_blog</p></a>
+  <a class="navbar-brand" href="https://sam-techy-solutions-blog.vercel.app/SAM_TECHY_SOLUTIONS_blog.html?fbclid=IwAR04qQOeQHBX8rUsFnX-FB1xeRaSWdPE8xfgX-PAvB5U2CSMQ6EFM_5fAuU#top"><img src="ST.png" width="50px" height="50%"><p>blog</p></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <i class="fa fa-bars" aria-hidden="true"></i>
   </button>
